# ribels

./: .gitignore  Cargo.toml  NetrwTreeListing  README.md  go.mod  go.sum  main.go
audio/: Angerfist & GridKiller - Virtual Disaster-AjuxtYd6Ey8.webm  bot.py  song.py
commands/: balance.go  coc-profile.go  coinflip.go  command_mapper.go  common_top.go  compare.go  ctbtop.go  current_league.go  exec.go  github.go  help.go  jackpot.go  maniatop.go  map.go  osu.go  pay.go  profile_league.go  recent.go  recent_league.go  remove-lol.go  remove_osu.go  reset_balance.go  servers.go  set.go  set_league.go  taikotop.go  top.go  vote.go
handlers/: message.go  ready.go
league_api/: client.go  errors.go  types.go
migrations/2020-10-09-190320_create_user/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
utils/: coc.go  code_execute.go  current_game.go  database.go  download_osu.go  format.go  get_mods.go  jackpot.go  league_api.go  levenshtein.go  osu_api.go  prefix_formatter.go  vote.go
