[package]
name = "ribels"
version = "0.1.0"
authors = ["nireo <eemil.lehtikangas1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
dotenv = "0.14"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
r2d2 = "0.8"
uuid = { version = "0.6", features = ["serde", "v4"] }
reqwest = { version = "0.10", features = ["json", "blocking"] }



[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
version = "0.9.0-rc.2"
